--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "BLT bot",
-  "description": "Discord BLT bot",
-  "version": "0.0.1",
+  "name": "Test",
+  "description": "Test",
+  "version": "0.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "11.3.0",
-	"request": "2.81.0",
-    "node-fetch": "2.0.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
