--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Test",
-  "description": "Test",
+  "name": "BLT bot",
+  "description": "Discord BLT bot",
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
