--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "discord.js": "11.1.0",
-    "request": "2.81.0",
-	"node-fetch": "2.0.0"
+    "request": "2.81.0"
   }
 }
