--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "BLT bot",
-  "description": "Discord BLT bot",
+  "name": "Test",
+  "description": "Test",
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "11.3.0",
-    "request": "2.81.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0",
+	"node-fetch": "2.0.0"
   }
 }
+
