--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Test",
-  "description": "Test",
+  "name": "BLT bot",
+  "description": "BLT bot",
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "discord.js": "11.1.0",
-    "request": "2.81.0",
-	"node-fetch": "2.0.0"
+    "request": "2.81.0"
   }
 }
 
